Preserve feature-flag public ordering and internal rows